--- a/FlaskDemo01/templates/homework.html
+++ b/FlaskDemo01/templates/homework.html
@@ -7,9 +7,10 @@
     <title>homework</title>
 </head>
 <body>
-    <h1>歌名:{{song}}</h1>
-    <h3>作词:{{write_words}}</h1>
-    <h3>作曲:{{compose}}</h1>
-    <h3>演唱:{{singer}}</h1>
+    <!-- html中的文件字典可用params.song代替params['song']-->
+    <h1>歌名:{{params['song']}}</h1>
+    <h3>作词:{{params['write_words']}}</h1>
+    <h3>作曲:{{params['compose']}}</h1>
+    <h3>演唱:{{params['singer']}}</h1>
 </body>
 </html>
